# djangorestframework-mcp-server

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: release.yml  tests.yml
async/: index.html
auth/: index.html
concepts/: index.html
docs/: async.md  auth.md  concepts.md  index.md  observability.md  performance.md  prompts.md  quickstart.md
docs/recipes/: async-auth-backend.md  chain-tools.md  custom-permission.md  drf-spectacular.md  expose-a-service.md  index.md  migrating.md  polymorphic-action.md  rate-limiting.md  redis-sse-broker.md  selector-tool-with-filterset.md  sse-replay-buffer.md  swap-session-store.md  toon-output.md
docs/reference/: auth.md  index.md  mcp-server.md  output.md  protocol.md  registries.md
examples/: README.md
examples/invoicing/: README.md  manage.py
examples/job_status/: README.md  manage.py
observability/: index.html
performance/: index.html
prompts/: index.html
quickstart/: index.html
recipes/: index.html
recipes/async-auth-backend/: index.html
recipes/chain-tools/: index.html
recipes/custom-permission/: index.html
recipes/drf-spectacular/: index.html
recipes/expose-a-service/: index.html
recipes/migrating/: index.html
recipes/polymorphic-action/: index.html
recipes/rate-limiting/: index.html
recipes/redis-sse-broker/: index.html
recipes/selector-tool-with-filterset/: index.html
recipes/sse-replay-buffer/: index.html
recipes/swap-session-store/: index.html
recipes/toon-output/: index.html
reference/: index.html
reference/auth/: index.html
reference/mcp-server/: index.html
reference/output/: index.html
reference/protocol/: index.html
reference/registries/: index.html
rest_framework_mcp/: __init__.py  check_removed_settings.py  conf.py  constants.py  version.py
rest_framework_mcp/_compat/: __init__.py  acall.py  tracing.py  utils.py
rest_framework_mcp/adapters/: __init__.py  chain_to_tool.py  selector_to_resource.py  selector_to_tool.py  service_to_tool.py  utils.py
rest_framework_mcp/auth/: __init__.py  audience.py  auth_backend.py  insufficient_scope_response.py  protected_resource_metadata.py  token_info.py  unauthenticated_response.py
rest_framework_mcp/config/: __init__.py  build_mcp_config.py
rest_framework_mcp/contrib/: __init__.py
rest_framework_mcp/handlers/: __init__.py  async_dispatch.py  build_call_pool.py  call_spec_tool.py  chain_tool_dispatch.py  context.py  dispatch.py  handle_initialize.py  handle_ping.py  handle_prompts_get.py  handle_prompts_get_async.py  handle_prompts_list.py  handle_resources_list.py  handle_resources_read.py  handle_resources_read_async.py  handle_resources_templates_list.py  handle_tools_call.py  handle_tools_call_async.py  handle_tools_list.py  is_binding_listable.py  pagination.py  render_prompt_messages.py  selector_tool_dispatch.py  utils.py
rest_framework_mcp/output/: __init__.py  encode_json.py  encode_toon.py  error_tool_result.py  format.py  resolve_include_structured_content.py  resolve_structured_output.py  tool_result.py
rest_framework_mcp/protocol/: __init__.py  build_server_info.py  get_prompt_result.py  initialize_params.py  initialize_result.py  json_rpc_error.py  json_rpc_error_code.py  json_rpc_message.py  json_rpc_notification.py  json_rpc_request.py  json_rpc_response.py  jsonrpc_constants.py  parse_message.py  prompt.py  prompt_message.py  server_capabilities.py  tool.py  tool_content_block.py  tool_result.py
rest_framework_mcp/registry/: __init__.py  prompt_binding.py  prompt_registry.py  register_tools.py  resource_binding.py  resource_registry.py  selector_tool_binding.py  tool_binding.py  tool_registry.py
rest_framework_mcp/schema/: __init__.py  chain_tool_schema.py  filterset_schema.py  input_schema.py  output_schema.py  selector_tool_schema.py  service_tool_schema.py  spectacular_overrides.py  utils.py
rest_framework_mcp/server/: __init__.py  mcp_server.py  mcp_service_view.py  utils.py
rest_framework_mcp/transport/: __init__.py  async_streamable_http_view.py  async_streamable_http_viewset.py  django_cache_session_store.py  in_memory_session_store.py  in_memory_sse_broker.py  in_memory_sse_replay_buffer.py  negotiate_protocol_version.py  origin_validation.py  protocol_version.py  redis_sse_broker.py  redis_sse_replay_buffer.py  sse_broker.py  sse_replay_buffer.py  sse_response.py  streamable_http_view.py  streamable_http_viewset.py  utils.py
scripts/: benchmark.py
search/: search_index.json
tests/: conftest.py  conftest_settings.py  test_conf.py  test_constants.py  test_display_metadata.py  test_endtoend.py  test_examples_smoke.py  test_multi_server.py  test_prompts_endtoend.py  test_re_exports.py  test_tracing.py  test_validation_value_echo.py  utils.py
tests/adapters/: test_input_serializer_validation.py  test_spec_permission_classes.py  test_tool_annotations.py
tests/auth/: test_audience.py  test_response_builders.py  test_token_info.py
tests/testapp/: mcp.py  (+8 more)
(+186 files in other folders)
